--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GeetRatna | यीशु का लहू | Yeshu Ka Lahu - Christian Devotional Song</title>
-    <meta name="description" content="Complete lyrics of the Hindi Christian hymn 'Yeshu Ka Lahu' with video">
+    <meta name="description" content="✨ यीशु का लहू सारे पापों से शुद्ध करता है! उद्धार, शांति और अनंत जीवन देने वाला यह हिंदी ईसाई भजन (Yishu ka Lahu) के पूरे बोल, अर्थ और 1 यूहन्ना 1:7 का वचन जानें। यीशु मसीह के रक्त की शक्ति से पाप मुक्ति पाएं।">
+    <meta name="keywords" content="यीशु का लहू, Yishu ka Lahu, पापों से मुक्ति, हिंदी ईसाई भजन, यीशु मसीह का रक्त, 1 यूहन्ना 1:7, पाप धोने वाला लहू, ईसाई गीत, अनंत जीवन">
     
     <!-- Google Verification and Ads -->
     <meta name="google-site-verification" content="u4ZZuKr8I06OdyTRj1P7O5dE0OD_EygN2n1N006tVqc" />
