--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>GeetRatna | यीशु का लहू | Yeshu Ka Lahu - Christian Devotional Song</title>
     <meta name="description" content="✨ यीशु का लहू सारे पापों से शुद्ध करता है! उद्धार, शांति और अनंत जीवन देने वाला यह हिंदी ईसाई भजन (Yishu ka Lahu) के पूरे बोल, अर्थ और 1 यूहन्ना 1:7 का वचन जानें। यीशु मसीह के रक्त की शक्ति से पाप मुक्ति पाएं।">
     <meta name="keywords" content="यीशु का लहू, Yishu ka Lahu, पापों से मुक्ति, हिंदी ईसाई भजन, यीशु मसीह का रक्त, 1 यूहन्ना 1:7, पाप धोने वाला लहू, ईसाई गीत, अनंत जीवन">
-    
+    <link rel="icon" href="https://yt3.googleusercontent.com/s2WhsqUUbRa1jh8S99_MR_l6fC68GqcL9LpSt-cwqrxzrLAd6R8gKVn2mOYXJ6JhJimWzW6X=s32-c-k-c0x00ffffff-no-rj" type="image/jpeg">
     <!-- Google Verification and Ads -->
     <meta name="google-site-verification" content="u4ZZuKr8I06OdyTRj1P7O5dE0OD_EygN2n1N006tVqc" />
     <meta name="google-adsense-account" content="ca-pub-4836444185528882">
