--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <meta name="robots" content="index, follow, max-image-preview:large">
     <meta name="googlebot" content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1">
     <meta name="bingbot" content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1">
-    <link rel="canonical" href="https://geetratna.github.io/yeshu-ka-lahu" />
+    <link rel="canonical" href="https://geetratna.github.io/Yishu-kaa-lahu" />
     
     <!-- Open Graph / Social Media Meta Tags -->
     <meta property="og:title" content="यीशु का लहू गीत बोल और अर्थ | Yeshu Ka Lahu Lyrics Hindi (1 यूहन्ना 1:7)">
